Added JWT Bearer to project and setup in Configuration Settings

--- a/BookStore.API/appsettings.json
+++ b/BookStore.API/appsettings.json
@@ -9,5 +9,10 @@
   "ConnectionStrings": {
     "BookStoreDb": "Server = (localdb)\\mssqllocaldb; Database = BookStoreAPI; Trusted_Connection=True;MultipleActiveResultSets=true"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "ValidAudience": "User",
+    "ValidIssuer": "https://localhost:44381",
+    "Secret": "ThisIsMySecretKey123456789"
+  }
 }
